@@ -219,6 +219,7 @@ export(bernoulli)
 export(bf)
 export(bridge_sampler)
 export(brm)
+export(brm_repeat)
 export(brmsfamily)
 export(brmsformula)
 export(categorical)
