@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/brmsfit-helpers.R
+% Please edit documentation in R/brm_repeat.R
 \name{combine_models}
 \alias{combine_models}
 \title{Combine Models fitted with \pkg{brms}}
